<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- used by webview to enable Negotiate Challenge handling see https://chromium.googlesource.com/chromium/src/+/master/docs/webview_policies.md -->
    <restriction
        android:description="@string/NtlmV2EnabledDesc"
        android:key="com.android.browser:NtlmV2Enabled"
        android:restrictionType="bool"
        android:title="@string/NtlmV2EnabledTitle" />
    <restriction
        android:description="@string/AuthServerAllowlistDesc"
        android:key="com.android.browser:AuthServerAllowlist"
        android:restrictionType="string"
        android:title="@string/AuthServerAllowlistTitle" />
    <restriction
         android:description="@string/AuthServerWhitelistDesc"
         android:key="com.android.browser:AuthServerWhitelist"
         android:restrictionType="string"
         android:title="@string/AuthServerWhitelistTitle" />
    <restriction
        android:description="@string/AuthAndroidNegotiateAccountTypeDesc"
        android:key="com.android.browser:AuthAndroidNegotiateAccountType"
        android:restrictionType="string"
        android:title="@string/AuthAndroidNegotiateAccountTypeTitle" />
</restrictions>

